--- a/gemini-saga_-hex-strategy/index.html
+++ b/gemini-saga_-hex-strategy/index.html
@@ -26,6 +26,6 @@
 </head>
   <body class="bg-gray-800 text-white overflow-hidden">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
